auto_branch_pushes/kkimdev/ingress-sticky-test/ppluto-main/overlays/dev_gcp/deployment.yaml
kind: Rollout
apiVersion: argoproj.io/v1alpha1
metadata:
  name: ppluto-main
spec:
  selector:
    matchLabels:
      app: ppluto-main
  replicas: 1
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: ppluto-main
    spec:
      terminationGracePeriodSeconds: 1800 # https://jenakim47.tistory.com/80
      containers:
        - name: ppluto-main--prod-client
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client:ccc4cfdc640300c8a440a377a15b397c6d998c51eaa28d995d1d4cce0929c0c1
          ports:
            - containerPort: 5280
            - containerPort: 5380
            - containerPort: 5480
          resources:
            requests:
              cpu: 40m
            limits:
              cpu: 200m
              memory: 100Mi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-client-tickerbell
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-client-tickerbell:e9f6ceb906b8e61795af57bf372a1eab4bd5c5b014724861923f37daca7a7020
          ports:
            - containerPort: 5080
            - containerPort: 5095
          readinessProbe:
            httpGet:
              port: 5080
              path: /
          livenessProbe:
            httpGet:
              port: 5080
              path: /
          resources:
            requests:
              cpu: 100m
            limits:
              cpu: 500m
              memory: 3Gi
              ephemeral-storage: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
        - name: ppluto-main--prod-server
          image: registry.gitlab.com/ppluto-dev/ppluto-main/prod-server:2974fabea791674aec33c30e05e2a0728b3725c113971cb3c39bc2706a158551
          ports:
            - containerPort: 81
            - containerPort: 82
            - containerPort: 83
            - containerPort: 84
          readinessProbe:
            # TODO: Implement gRPC health check instead. https://kubernetes.io/docs/concepts/workloads/pods/pod-lifecycle/#probe-check-methods
            tcpSocket:
              port: 82
          # TODO: Enable `livenessProbe`.  Temporarily disabled to debug container crash issue.
          # livenessProbe:
          #   tcpSocket:
          #     port: 82
          resources:
            requests:
              cpu: 200m
            limits:
              cpu: 1000m
              memory: 3Gi
              ephemeral-storage: 5Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 1800"]
      imagePullSecrets:
        - name: gitlab-container-registry
  strategy:
    blueGreen:
      activeService: ppluto-main-service-active
      previewService: ppluto-main-service-preview
      autoPromotionEnabled: true
